Підсумок кроку 0 ✅ Що зроблено:
Створено структуру пакетів відповідно до цільової архітектури.

Імпортовано всі Java-класи зі старого проекту з перейменуванням пакетів.

Виправлено BOM-проблему (файли збережено в UTF-8 без BOM).

Оновлено всі імпорти та назви класів (наприклад, BookRepository → SqliteBookRepository).

Додано українські коментарі.

Усунуто конфлікти між AWT та JavaFX (використано повні імена або окремі імпорти).

Проєкт успішно компілюється.